--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,28 +11,79 @@
     padding: 0;
 }
 
+body {
+    background-color: var(--light-shades);
+}
+
 header {
     width: 100%;
+    height: 22vh;
     display: inline-flex;
-    background-color: var(--light-shades);
     margin-bottom: 30px;
 }
 
 img {
-    width: 170px;
-    height: 170px;
+    width: 250px;
+    height: 250px;
     border-radius: 30px;
 }
 
 h1 {
-    margin-top: 60px;
-    margin-left: 340px;
+    margin-top: 100px;
+    margin-left: 355px;
     font-size: 70px;
     letter-spacing: 0.3rem;
     color: var(--main-brand);
 }
 
+h1,
+footer p {
+    font-family: 'Eagle Lake', cursive;
+}
+
+#calendar-container {
+    margin: 10px auto;
+}
+
+footer p {
+    color: var(--dark-accent);
+    text-align: center;
+}
+
+#calendar-header {
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    letter-spacing: 0.2rem;
+}
+
+i {
+    color: var(--dark-accent);
+}
+
 td {
+    position: relative;
+    top: 0;
+    right: 0;
     height: 100px;
 }
 
+.input,
+#saveBtn {
+    outline: none;
+    border: none;
+    background: transparent;
+}
+
+.input {
+    margin-left: 6px;
+}
+
+#saveBtn {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    cursor: pointer;
+    margin-right: 8px;
+    padding: 7px;
+}
