--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,7 +12,13 @@
 }
 
 body {
-    background-color: var(--light-shades);
+	min-height: 100vh;
+	min-width: 100%;
+	 background: #FDC830;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #F37335, #FDC830,#a83d08);  
+	background: linear-gradient(to right, #F37335, #FDC830,#ff6214); 
+	animation: gradient 10s ease infinite;
+	background-size: 400% 400%;  
 }
 
 header {
@@ -29,15 +35,18 @@ img {
 }
 
 h1 {
-    margin-top: 100px;
-    margin-left: 355px;
+    font-weight: 900;
+    margin-top: 50px;
+    margin-left: 255px;
     font-size: 70px;
     letter-spacing: 0.3rem;
-    color: var(--main-brand);
+    color: #ffffff;
+    text-shadow: 4px 4px #5c5c5c4d;
 }
 
 h1,
 footer p {
+    color: white;
     font-family: 'Eagle Lake', cursive;
 }
 
@@ -46,7 +55,8 @@ footer p {
 }
 
 footer p {
-    color: var(--dark-accent);
+    text-shadow: 1px 1px #000000;
+    color: white;
     text-align: center;
 }
 
