added button that will link to the firebase.html where I am setting up the interaction with the database

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -65,6 +65,11 @@ td {
     max-width: 110px;
 }
 
+.btnEvent {
+    float: right;
+    margin-right: 50px;
+}
+
 .input {
     margin: 2px 6px 6px 6px;
     padding: 10px;
