--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -106,7 +106,7 @@ footer p {
 
 
 
-.button {
+/* .button {
     position: relative;
     width: 200px;
     height: 60px;
@@ -116,7 +116,7 @@ footer p {
     cursor: pointer;
     padding: 10px 30px;
     font-size: 15px;
-}
+} */
 
 
 .time-form {
