--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -39,7 +39,7 @@ footer p {
 }
 
 .dropdown::before {
-    content:"";
+    content: "";
 
 }
 
@@ -72,6 +72,7 @@ aside {
     height: 91vh;
     text-align: center;
     box-shadow: 0 8px 12px 8px var(--dark-accent);
+
 }
 
 li {
@@ -192,18 +193,18 @@ footer p {
 }
 
 .btn:active {
-    color:var(--dark-accent);
+    color: var(--dark-accent);
 }
 
-.btn:active::after{
+.btn:active::after {
     background: transparent;
 }
 
-.btn:hover::before{
+.btn:hover::before {
     opacity: 1;
 }
 
-.btn::after{
+.btn::after {
     z-index: -1;
     content: '';
     position: absolute;
@@ -235,4 +236,18 @@ footer p {
     width: 450px;
     box-shadow: 10px 10px #00000040;
     padding: 100px;
+}
+
+.currentWeather {
+    background-color: white;
+    padding: 10px;
+    padding-bottom: 100px;
+    border-radius: 50px;
+    border-bottom: solid;
+    border-color: rgb(160, 95, 4);
+    border-width: 5px;
+    box-shadow: 0px 4px #00000050;
+    font-family: 'Eagle Lake', cursive;
+    color: var(--dark-shades);
+
 }
