--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -22,28 +22,36 @@ body {
 
 h1 {
     font-size: 70px;
+    font-weight: 900;
     text-shadow: 6px 8px var(--main-brand);
     letter-spacing: 0.4rem;
 }
 
 header {
-    height: 25vh;
-    box-shadow: none;
-    border-width: 2px;
+    height: 28vh;
 }
 
 h1,
+.custom,
+h2,
 footer p {
-    font-weight: 900;
     color: var(--light-shades);
 }
 
-.dropdown::before {
-    content:"";
 
+h2 {
+    margin: 10px 0 40px 1289px;
+    color: var(--light-shades);
+    text-shadow: 8px 8px 7px var(--dark-shades);
+}
+
+.p-events {
+    color: var(--light-accent);
+    font-weight: 900;
 }
 
 h1,
+.custom,
 #calendar-header,
 aside p,
 h3,
@@ -56,10 +64,6 @@ h3 {
     color: var(--dark-accent);
 }
 
-.timezone {
-    color: var(--light-shades);
-}
-
 #calendar {
     margin: 10px;
     flex: 0 0 80%;
@@ -69,14 +73,29 @@ h3 {
 aside {
     flex: 0 0 18%;
     margin: 17px 0 15px 0;
-    height: 91vh;
     text-align: center;
     box-shadow: 0 8px 12px 8px var(--dark-accent);
 }
 
+.icon {
+    margin-left: 5px;
+}
+
+.custom {
+    font-size: 16px;
+}
+
+.custom:hover,
+.custom:focus {
+    color: var(--light-accent);
+    text-shadow: 3px 3px 2px var(--dark-shades);
+}
+
+
 li {
     list-style: none;
 }
+
 
 #calendar-header,
 aside p {
@@ -129,12 +148,14 @@ footer {
 
 footer p {
     font-size: 18px;
+    font-weight: 500;
     text-align: center;
     letter-spacing: 0.2rem;
     text-shadow: 2px 2px var(--main-brand);
 }
 
-.time-form {
+.time-form,
+.login-form {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -192,18 +213,18 @@ footer p {
 }
 
 .btn:active {
-    color:var(--dark-accent);
+    color: var(--dark-accent);
 }
 
-.btn:active::after{
+.btn:active::after {
     background: transparent;
 }
 
-.btn:hover::before{
+.btn:hover::before {
     opacity: 1;
 }
 
-.btn::after{
+.btn::after {
     z-index: -1;
     content: '';
     position: absolute;
@@ -229,7 +250,8 @@ footer p {
     }
 }
 
-.time-widget {
+.time-widget,
+.login-widget {
     display: none;
     background-color: var(--main-brand);
     width: 450px;
